--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
