--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-markdown": "^9.0.1",
+    "react-markmap": "^0.0.1",
     "react-slick": "^0.29.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
     "tailwind-merge": "^1.14.0",
