--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build || true",
-    "start": "next start",
-    "postinstall": "next lint --max-warnings=0 || true",
-    "lint": "next lint"
-},
+    "build": "next build",
+    "start": "next build && next start",
+    "postinstall": "next build"
+  },
+  
 
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
